# PebbleTextSync

./: .gitattributes  .gitmodules  CONTRIBUTING.MD  LICENSE  README.MD  protocol.md  renovate.json
.github/: FUNDING.yml
.github/workflows/: develop.yaml  pull-request-post.yaml  verifyPr.yaml
mobile/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
mobile/app/: build.gradle.kts  proguard-rules.pro
mobile/app-screenshot-tests/: build.gradle.kts
mobile/bluetooth/api/: build.gradle.kts
mobile/bluetooth/data/: build.gradle.kts
mobile/buildSrc/: build.gradle.kts
mobile/common/: build.gradle.kts
mobile/common-compose/: build.gradle.kts
mobile/common-navigation/: build.gradle.kts
mobile/common-retrofit/: build.gradle.kts
mobile/common-retrofit/android/: build.gradle.kts
mobile/config/: android-lint.xml  detekt.yml  global_compose_stable_classes.txt  libs.toml
mobile/config/hooks/: pre-commit
mobile/detekt/: build.gradle.kts
mobile/files/api/: build.gradle.kts
mobile/files/data/: build.gradle.kts
mobile/files/ui/: build.gradle.kts
mobile/home/api/: build.gradle.kts
mobile/keys/: debug.jks  release.jks
mobile/navigation-impl/: build.gradle.kts
mobile/shared-resources/: build.gradle.kts
watch/: .gitignore  CMakeLists.txt  package.json
watch/src/: commons  main.c
watch/src/connection/: packets.c  packets.h
watch/src/data/: config.c  config.h
watch/src/ui/: window_file_list.c  window_file_list.h  window_status.c  window_status.h  window_text.c  window_text.h
watch/src/ui/layers/: status_bar.c  status_bar.h
(+173 files in other folders)
